--- a/Login-Session-Lab/templates/home.html
+++ b/Login-Session-Lab/templates/home.html
@@ -8,9 +8,11 @@
 <body>
 <h1>Write your name, age, and a message!</h1>
 <br>
-
-<!-- Create your form here!
- -->
- 
+<form action="/" method = "POST">
+	<input type="text" name="name" placeholder="Author's name"><br>
+	<input type="text" name="age" placeholder="age"><br>
+	<input type="text" name="message" placeholder="quote"><br>
+	<input type="submit" name="submit">
+</form>
 </body>
 </html>
